kuberenetes/azureeksdeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-new-app
  labels:
    app: aks-new-app
    namespace: dev
spec:
  selector:
    matchLabels:
      app: aks-new-app
  template:
    metadata:
      labels:
        app: aks-new-app
    spec:
      containers:
      - name: aks-new-app
        image: abidh786/akspurpose-repo:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"  

        
---
apiVersion: v1
kind: Service
metadata:
  name: aks-new-service
  labels:
    app: aks-new-app
    namespace: dev
spec:
  type: ClusterIP
  selector:
    app: aks-new-app
  ports:
  - port: 5000
    targetPort: 5000
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aksrepoingress
  labels:
    name: aksrepoingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    appgw.ingress.kubernetes.io/backend-protocol: "http"
    appgw.ingress.kubernetes.io/use-private-ip: true
      
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: aks-new-service
            port: 
              number: 5000
