kuberenetes/eksrepoingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eksrepoingress
  labels:
    name: eksrepoingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: eks-group-lb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]' 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '10' 
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/success-codes: '200' 
      
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/eks-k8s"
        backend:
          service:
            name: aks-new-service-2
            port: 
              number: 3000
