kuberenetes/onemoreingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aksrepoingress
  labels:
    name: aksrepoingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    appgw.ingress.kubernetes.io/backend-protocol: "http"
      
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: aks-new-service
            port: 
              number: 5000
