kuberenetes/sampledeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-new-app
  labels:
    app: aks-new-app
    namespace: dev
spec:
  selector:
    matchLabels:
      app: aks-new-app
  template:
    metadata:
      labels:
        app: aks-new-app
    spec:
      serviceAccountName: my-serviceaccount
      containers:
      - name: aks-new-app
        image: abidh786/akspurpose-repo:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"  

        
---
apiVersion: v1
kind: Service
metadata:
  name: aks-new-service
  labels:
    app: aks-new-app
    namespace: dev
spec:
  
  type: NodePort
  selector:
    app: aks-new-app
  ports:
  - port: 5000
    targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: aks-new-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: eks-group-lb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]' 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '10' 
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/success-codes: '200' 

spec:
  
  ingressClassName: my-aws-ingress-class
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: aks-new-service
            port: 
              number: 5000
